Replace `StringUtils` with `Strings` for string operations and update related imports. Refactor exception handling to include `URISyntaxException` where necessary.
Replace `StringUtils` with `Strings` for string operations and update related imports.